--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">IOSFUSION2017</string>
+    <string name="app_name">iOS Fusion 3.0</string>
     <string name="title_activity_nav_dra">NavDraActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
